2013-01-25 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl,rivet/rivet-tcl/tclIndex: New command for XML fragments
    composition

2013-01-20 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: added removal of libool created .la files for librivetparser and
    librivet

2012-12-30 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: revised command for simple XML string mark up

2012-12-18 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetPkgInit.c: package version taken from preprocessor symbol
    RIVET_VERSION so that it's guaranteed mod_rivet.c will get the right library
    version.
    * src/apache-2/mod_rivet.c: removed trailing spaces from various lines (offends
    some patch management tools such as quilt)

2012-12-17 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/install.xml: fixed link to download page on the website
    * rivet/packages/dio/dio.tcl: method store uses internally methods 'insert' or
    'update' (depending on the existence of a row having the same keyfield). The
    latest version of DIO shipped a 'store' method that returns the very same value
    returned either by 'insert' or 'update'. Previous versions of DIO returned
    invariably 1, which was undocumented and not very well thought out (handled 
    errors in 'store' return a -code error, not necessarily 0). Previous behavior
    is reinstated (bug #54313)

2012-12-16 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl: method 'store' had an hardcoded 
    'parray' the ran  when an error occurred. It also printed a message using 
    'puts' instead of 'debug' 

2012-12-15 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: command 'headers' returns a meaningful error in case
    a subcommand is invalid

2012-12-12 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: Tcl_PkgRequire for packages Rivet and rivetlib