@@ -1,3 +1,7 @@
+2013-01-28 Massimo Manghi <mxmanghi@apache.org>
+    * src/apache-2/mod_rivet.[c|h],rivetCore.c: removed hardcoded error code 
+    generated by abort_page and defined in the preprocessor symbol ABORTCODE.
+    
 2013-01-25 Massimo Manghi <mxmanghi@apache.org>
     * rivet/rivet-tcl/xml.tcl,rivet/rivet-tcl/tclIndex: New command for XML fragments
     composition
